8332497: javac crashes when annotation processing runs on program with module imports